--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,4 +1,4 @@
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra -g
 CC = cc
 
 SRC = philo.c errors.c argument_check.c utils.c
@@ -7,7 +7,7 @@ OBJ = $(SRC:.c=.o)
 NAME = philo
 
 all : $(NAME) clean
-	./$(NAME) 3 600 300 400 10 1>res
+	./$(NAME) 10 600 300 600 10
 
 $(NAME) : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ) -lpthread -o $(NAME)
@@ -26,6 +26,6 @@ fclean : clean
 	rm -f $(NAME)
 
 val :
-	valgrind --leak-check=full --leak-check=full --show-leak-kinds=all ./$(NAME) 3 600 300 400
+	valgrind --leak-check=full --leak-check=full --show-leak-kinds=all ./$(NAME) 2 600 300 400
 
 .phony : OBJ clean c re fclean f all
