max food check added

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -7,7 +7,7 @@ OBJ = $(SRC:.c=.o)
 NAME = philo
 
 all : $(NAME) clean
-	./$(NAME) 60 810 400 400 10
+	./$(NAME) 140 806 400 400
 
 $(NAME) : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ) -lpthread -o $(NAME)
