struct changes depens on reduced data needs. tphilo removed. all data stored in tdata struct. all functions related with structs reworked.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
 		"plaintext": false,
 		"markdown": false,
 		"scminput": false
+	},
+	"files.associations": {
+		"string.h": "c",
+		"pthread.h": "c"
 	}
 }
