--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -9,7 +9,7 @@ NAME = philo_bonus
 all : $(NAME) run
 
 run:
-	./$(NAME) 5 810 200 200 20
+	./$(NAME) 3 810 400 400 8
 
 $(NAME) : $(OBJ) philo.h
 	$(CC) $(CFLAGS) $(OBJ) -lpthread -o $(NAME)
@@ -28,7 +28,7 @@ fclean : clean
 	rm -fr $(NAME)
 
 val :
-	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all ./$(NAME) 4 810 200 200 8
+	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --trace-children=yes --track-fds=yes ./$(NAME) 11 810 400 400 8
 
 hel :
 	valgrind --tool=helgrind --history-level=none ./$(NAME) 4 800 200 190 2
