--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,7 +1,7 @@
 CFLAGS = -Wall -Werror -Wextra -g
 CC = cc
 
-SRC = philo.c errors.c argument_check.c utils.c routine.c init_philos.c
+SRC = philo.c argument_check.c utils.c utils2.c routine.c children.c
 OBJ = $(SRC:.c=.o)
 
 NAME = philo_bonus
@@ -28,9 +28,9 @@ fclean : clean
 	rm -fr $(NAME)
 
 val :
-	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --trace-children=yes --track-fds=yes ./$(NAME) 10 810 400 400 2
+	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --trace-children=yes --track-fds=yes ./$(NAME) 10 810 300 300 2
 
 hel :
 	valgrind --tool=helgrind --history-level=none ./$(NAME) 4 800 200 190 2
 
-.phony : OBJ clean c re fclean f all val
+.phony : OBJ clean c re fclean f all val drd
