--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
 		"stdlib.h": "c",
 		"signal.h": "c",
 		"fcntl.h": "c",
-		"limits.h": "c"
+		"limits.h": "c",
+		"array": "c",
+		"string": "c",
+		"string_view": "c",
+		"ranges": "c"
 	}
 }
